syntax = "proto3";

package com.wegtam.tensei.remote.adt;

option java_multiple_files = true;
option optimize_for        = SPEED;

message DFASDLReference {
    string cookbook_id = 1;
    string dfasdl_id = 2;
}
