syntax = "proto3";

package com.wegtam.tensei.remote.adt;

option java_multiple_files = true;
option optimize_for        = SPEED;

message ElementReference {
    string dfasdl_id = 1;
    string element_id = 2;
}
