syntax = "proto3";

package com.wegtam.tensei.remote.adt;

option java_multiple_files = true;
option optimize_for        = SPEED;

import "com/wegtam/tensei/remote/adt/MappingTransformation.proto";

enum RecipeMode {
    RecipeMapAllToAll = 0;
    RecipeMapOneToOne = 1;
}

message Recipe {
    string id                               = 1;
    repeated MappingTransformation mappings = 2;
    RecipeMode mode                         = 3;
}
